projects/springboot-camel/src/main/resources/yml/demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
