projects/springboot-camel/src/main/resources/yml/demo-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-route
spec:
  path: /camel
  to:
    kind: Service
    name: demo-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
